--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,11 @@ body {
     line-height: 1.2;
     color: #444444;
 }
+@media screen and (min-width:768px){
+    body {
+        background-color: lightblue;
+    }
+}
 
 h1,
 h2,
