--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,12 @@ body {
     }
 }
 
+ @media screen and (orientation:landscape){
+          body{
+                      backgound-color:blue;     
+                  }
+         }
+
 h1,
 h2,
 h3,
