--- a/src/style.css
+++ b/src/style.css
@@ -1,189 +1,276 @@
-html
-{
-    font-size: 16px;
+/* Base styles (extra small devices - mobile) */
+/* CSS rules */
+html {
+  font-size: 14px;
 }
+
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.2;
-    color: #444444;
-}
-@media screen and (min-width:768px){
-    body {
-        background-color: lightblue;
-    }
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  color: #444444;
 }
 
- @media screen and (orientation:landscape){
-          body{
-                      backgound-color:blue;     
-                  }
-         }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    color: #222222;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  color: #222222;
 }
 
+h1 { font-size: 2.5rem; text-align: center; margin: 8px 0; }
+h2 { font-size: 2rem; text-align: center; }
+h3 { font-size: 1.75rem; }
+h4 { font-size: 1.5rem; }
+h5 { font-size: 1.25rem; }
+h6 { font-size: 1rem; }
 
+a {
+  text-decoration: none;
+  color: #3B82F6;
+}
+
+a:hover, a:focus {
+  color: #1D4ED8;
+}
 
 #navbar {
-    padding: 8px;
-
+  padding: 8px;
+  margin: 0;
 }
 
-#logo {
-    height: 30px;
+#logo-with-text {
+  display: none;
 }
 
-#name {
-    font-family: sans-serif;
-    font-size: 40px;
-    color: blueviolet;
-}
 
 #banner {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-
-}
-
-.about {
-    text-align: center;
-   
+  object-fit: cover;
+  width: 100%;
+  height: 120px;
 }
 
 #about {
-    display: flex;
-    max-width: 1600;
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 8px;
 }
 
-#description {
-    max-width: 550px;
-    font-size: 1rem;
-    width: 50%;
-    padding: 20px;
+#team-image {
+  border-radius: 5px;
+  width: 100%;
 }
 
-#team {
-    width: 50%;
-    padding: 20px;
-    object-fit: cover;
-
+#jobs {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 0 8px;
 }
 
-#team-iamge {
-    width: 100%;
-    border-radius: 10px;
-    object-fit: cover;
-
-
+.job {
+  border: 1px solid #dddddd;
+  border-radius: 5px;
+  margin-bottom: 8px;
+  padding: 8px;
 }
 
-.job-role {
-    margin-top: 6px;
-    margin-bottom: 0;
-    margin-left: 10px;
+.job-title {
+  font-size: 1.25em;
+  color: #222222;
+  font-weight: 500;
 }
 
-.location {
-    margin-left: 17px;
-    color: gray;
+.job-detail {
+  color: #777777;
+  margin-top: 2px;
 }
 
-#apply {
-    float: right;
-    margin-right: 17px;
+#jobs-table {
+  display: none;
 }
 
-a {
-    text-decoration: none;
-    color:#3b82f6;
+#application {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 0 8px;
 }
-a:hover
-{
-    color:#1d4ed8;
+
+.form-group {
+  margin: 16px 0;
+}
+
+#application-form label {
+  font-weight: 600;
+}
+
+.form-group input, select, textarea {
+  padding: 8px;
+  width: 90%;
+  font-size: 1.25rem;
+  margin-top: 4px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+
+.form-group textarea {
+  font-family: 'Roboto', sans-serif;
+}
+
+.form-group input[type="checkbox"] {
+  width: 16px;
+  height: 16px;
+}
+
+.form-group input[type="submit"] {
+  background-color: #3B82F6;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 #footer {
-    background-color: rgb(244, 243, 240);
-    margin-top: 30px;
-    padding: 10px;
-    text-align: center;
+  background-color: #E2E8F0;
+  padding: 8px;
+  margin-top: 32px;
+  text-align: center;
 }
 
-#copyrigth {
-    text-align: center;
-    color: #999999;
-    font-size: 0.875rem;
-
+#footer-links {
+  list-style: none; 
+  padding: 0; 
 }
 
-ul {
-    list-style: none;
-
+#footer-links li {
+  margin: 8px 0;
 }
 
-ul li {
+
+.copyright {
+  color: #71717A;
+  font-size: 0.875rem;
+}
+
+
+
+/* Small devices (tablets) */
+@media screen and (min-width: 576px) {
+  html {
+    font-size: 16px;
+  }
+
+  h1 { margin: 16px 0; }
+
+  #logo {
+    display: none;
+  }
+
+  #logo-with-text {
+    display: block;
+  }
+
+  #banner {
+    height: 200px;
+  }
+
+  #footer-links li {
     display: inline;
-    margin: 0 20px;
-
+    margin: 0 16px;
+  }  
+  
 }
 
-#job-table {
-    margin: 0 200px;
-    border: 1px solid black;
-    width: 60%;
-    border-collapse: collapse;
-}
+/* Medium devices (laptops) */
+@media screen and (min-width: 768px) {
 
-.jobs-header-row th {
-    border: 1px solid black;
-    padding: 8px;
-    background-color:#dbeafe;
-    color:#222222;
-}
+  #banner {
+    height: 280px;
+  }
 
-.job-data-row td {
-    border-right: 1px solid black;
-    padding: 8px;
-    text-align: center;
-}
+  h1 { margin: 20px 0; }
 
-#job-table tr:nth-child(odd) {
-    background-color:#eff6ff;
-}
-
-#application-form  label
-{
-  font-size: 600;
-}
-#application-form  input,select,textarea{
-    padding: 4px;
-    font-size: 1.25rem;
-    margin-top: 4px;
-    border-radius: 5px;
-    border:1px solid gray;
-    font-family:'Roboto',sans-serif;
-}
-
-#application-form  div{
-    margin: 10px;
-}
-#application-form  div input[type="checkbox"]{
-    width: 16px;
-    height: 16px;
-}
-#application{
+  #about {
+    flex-direction: row;
     max-width: 800px;
-    margin: 0 auto;
+  }
+
+  #description {
+    width: 50%;
+    padding-right: 8px;
+    font-size: 1.25rem;
+  }
+  
+  #team {
+    width: 50%;
+  }
+
+  #jobs {
+    max-width: 800px;
+  }
+
+  #jobs-list {
+    display: none;
+  }
+
+  #jobs-table {
+    display: table;
+    width: 100%;
+    border: 1px solid gray;
+    border-collapse: collapse;
+  }
+  
+  .jobs-header-row th {
+    border: 1px solid gray;
     padding: 8px;
+    background-color: #BFDBFE;
+    text-align: center;
+    color: #222222;
+  }
+  
+  .jobs-data-row td {
+    border: 1px solid gray;
+    padding: 8px;
+  }
+  
+  #jobs-table tr:nth-child(odd) {
+    background-color: #EFF6FF;
+  }
+
+  #application {
+    max-width: 800px;
+  }
+
+  .form-group input, select {
+    width: auto;
+  }
+
+  .form-group textarea {
+    width: 80%;
+  }
+  
 }
+
+/* Large devices (laptops/desktops) */
+@media screen and (min-width: 992px) {
+  /* CSS rules */
+}
+
+/* Extra large devices (large desktops) */
+@media screen and (min-width: 1200px) {
+  /* CSS rules */
+}
+/*
+
+
+
+
+
+
+
+
+
+
+
+
+*/
